[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Gamepixies-8MO6n.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.364706, 0.27451, 0.447059, 0.423529 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0823529, 0, 0, 1 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.313726 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0, 0, 0.717647 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.14902, 1, 0.901961, 0.313726 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.901961, 0.937255, 1, 0.403922 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Health" type="PanelContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 26.0
margin_bottom = 26.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Health"]
margin_left = 1.0
margin_top = 1.0
margin_right = 40.0
margin_bottom = 17.0

[node name="Label" type="Label" parent="Health/HBoxContainer"]
margin_top = 1.0
margin_right = 35.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Health:"
valign = 1

[node name="Bandaids" type="HBoxContainer" parent="Health/HBoxContainer"]
margin_left = 39.0
margin_right = 39.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GameOver"]
margin_right = 480.0
margin_bottom = 270.0
custom_styles/panel = SubResource( 6 )

[node name="YouDied" type="PanelContainer" parent="GameOver"]
margin_top = 133.0
margin_right = 480.0
margin_bottom = 137.0
size_flags_vertical = 6
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="GameOver/YouDied"]
margin_top = 2.0
margin_right = 480.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.458824, 0, 0, 1 )
text = "You Died"
align = 1
valign = 1

[node name="JustKidding" type="MarginContainer" parent="GameOver"]
visible = false
margin_top = 101.0
margin_right = 480.0
margin_bottom = 168.0
size_flags_vertical = 6
custom_constants/margin_top = 58
custom_constants/margin_bottom = -14

[node name="Label" type="Label" parent="GameOver/JustKidding"]
margin_top = 58.0
margin_right = 480.0
margin_bottom = 81.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "Okay, not really. But you did get enough bug 
bites to go running back to your mom crying."
align = 1
valign = 1

[node name="Continue" type="Label" parent="GameOver"]
visible = false
margin_top = 237.0
margin_right = 480.0
margin_bottom = 270.0
size_flags_vertical = 10
custom_fonts/font = SubResource( 7 )
text = "Press ENTER to return to title.
"
align = 1
valign = 1

[node name="GameWin" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GameWin"]
margin_right = 480.0
margin_bottom = 270.0
custom_styles/panel = SubResource( 8 )

[node name="YouWin" type="PanelContainer" parent="GameWin"]
margin_top = 133.0
margin_right = 480.0
margin_bottom = 137.0
size_flags_vertical = 6
custom_styles/panel = SubResource( 9 )

[node name="Label" type="Label" parent="GameWin/YouWin"]
margin_top = 2.0
margin_right = 480.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You Win!"
align = 1
valign = 1

[node name="TurnsOut" type="MarginContainer" parent="GameWin"]
margin_top = 97.0
margin_right = 480.0
margin_bottom = 173.0
size_flags_vertical = 6
custom_constants/margin_top = 64
custom_constants/margin_bottom = -24

[node name="Label" type="Label" parent="GameWin/TurnsOut"]
margin_top = 64.0
margin_right = 480.0
margin_bottom = 100.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "So, funny story. Your power cable wasn't actually in
the basement at all! Your mom forgot she actually hid it 
under your bed."
align = 1
valign = 1

[node name="Continue" type="Label" parent="GameWin"]
margin_top = 237.0
margin_right = 480.0
margin_bottom = 270.0
size_flags_vertical = 10
custom_fonts/font = SubResource( 7 )
text = "Press ENTER to return to title.
"
align = 1
valign = 1
